# GCMC-Simulator

./: README.md  input_example.txt
CGCMC/: CMakeLists.txt  main.cpp  test.h
CGCMC/Input/: InputData.cpp  InputData.h
CGCMC/Potential/: LJ.cpp  LJ.h  Potential.cpp  Potential.h
CGCMC/SimulatorEngine/: SimulatorEngine.cpp  SimulatorEngine.h
CGCMC/Structure/: Atom.cpp  Atom.h  Group.cpp  Group.h  Particle.cpp  Particle.h
Input/: input - CH4.txt  input - CO2.txt  input - H2.txt  input - O2.txt  input.txt
result/: result_CH4.txt  result_CO2.txt  result_O2.txt
